gitops/apps/monitoring/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: bealv
  labels:
    probe: enabled
spec:
  rules:
    - host: "grafana.bealv.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-general-service
                port:
                  number: 3000
  tls:
    - hosts:
        - "grafana.bealv.lan"
      secretName: grafana-tls
