gitops/apps/monitoring/grafana-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-general
  namespace: monitoring
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 3000
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app: grafana-general
      ports:
        - port: 9090
          protocol: TCP
  podSelector:
    matchLabels:
      app: grafana-general
  policyTypes:
    - Egress
    - Ingress
