gitops/apps/monitoring/grafana-prom-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-k8s-grafana-general
  namespace: monitoring
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: grafana-general
      ports:
        - port: 9090
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: prometheus
      app.kubernetes.io/instance: k8s
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
    - Ingress
